2004-12-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/man2.test, tests/transform.test: Specify --mandir, in order
	not to fail when Autoconf changes its $mandir default.

2004-12-30  Alexandre Duret-Lutz  <adl@gnu.org>

	Support for `install-dvi', `install-html', `install-ps', and
	`install-pdf', as recently introduced into the GNU Coding
	Standard.

	* automake.in (handle_factored_dependencies): Reject
	uninstall-dvi-local, uninstall-html-local, uninstall-info-local,
	uninstall-ps-local, and uninstall-pdf-local.  Allow
	install-info-local even when no-installinfo is not used.
	(handle_data): Allow datarootdir, dvidir, htmldir, pdfdir, and psdir.
	(%standard_prefix): Declare these new standard directory variables.
	* doc/automake.texi (Texinfo, Third-Party Makefiles): Document
	install-dvi, install-html, install-pdf, and install-ps.
	(Extending): Document install-local-dvi, install-local-html,
	install-local-info, install-local-pdf, and install-local-ps.
	* lib/Automake/Rule.pm (%dependencies): Add new install rules,
	and remove uninstall-info.
	* /cvs/automake/automake/lib/am/texinfos.am (install-dvi,
	install-dvi-am, install-dvi-recursive, install-html,
	install-html-am, install-html-recursive, install-pdf,
	install-pdf-am, install-pdf-recursive, install-ps, install-ps-am,
	install-ps-recursive, uninstall-dvi-am, uninstall-html-am,
	uninstall-pdf-am, uninstall-ps-am): New rules.
	(uninstall-info): Delete.
	* tests/txinfo21.test: Augment to check for these new rules.
	* tests/exdir2.test: Do not use `htmldir' as example of
	undefined directory.
	* tests/overrid.test: Do not be fooled by install-ps and
	install-html.
	* tests/txinfo10.test: Do not grep for uninstall-info-recursive.

2004-12-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (Preprocessed Fortran): Fix the definition of FCLINK.

	* Makefile.am (maintainer-check): Refine check for @_ in scalar
	context.  Check for correct use of PRE_INSTALL, NORMAL_INSTALL,