@@ -1102,8 +1102,8 @@ New in 0.20:
 
 -----
 
-Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003
-Free Software Foundation, Inc.
+Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
+2004, 2005  Free Software Foundation, Inc.
 
 This file is part of GNU Automake.
 
