@@ -1,3 +1,8 @@
+2005-01-01  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* aclocal.in (parse_arguments, write_aclocal): Bump copyright year.
+	* automake.in ($gen_copyright, version): Likewise.
+
 2004-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/man2.test, tests/transform.test: Specify --mandir, in order
@@ -1614,7 +1619,7 @@
 
 -----
 
-Copyright (C) 2003, 2004  Free Software Foundation, Inc.
+Copyright (C) 2004, 2005  Free Software Foundation, Inc.
 
 This file is part of GNU Automake.
 
